Use pnpm and update README

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "astrofy",
-  "description": "Astrofy is a free and open-source template for your Personal Portfolio Website built with Astro and TailwindCSS. Create in minutes a website with Blog, CV, Project Section, Store and RSS Feed.",
+  "name": "vincentchuck.com",
+  "description": "Vincent Chuck's personal website",
   "type": "module",
   "version": "2.5.1",
   "private": true,
@@ -9,7 +9,8 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "preinstall": "npx only-allow pnpm"
   },
   "dependencies": {
     "@astrojs/image": "^0.17.2",
