--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "sharp": "^0.32.1"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.9"
+    "@tailwindcss/typography": "^0.5.9",
+    "prettier": "^3.0.1",
+    "prettier-plugin-astro": "^0.11.0"
   }
 }
